--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,16 @@ body {
     background-image: url(./assets/home/background-home-mobile.jpg);
   }
 }
+
+.plant {
+  animation: rotate 58s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
